Added: Remove banned user from room

--- a/src/Components/Room/Room Settings/Members/style/style.scss
+++ b/src/Components/Room/Room Settings/Members/style/style.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100vh;
   padding: 140px 10px 0 10px;
+  position: relative;
   .find-user-input {
     width: 100%;
     background: transparent;
