--- a/src/Components/Room/Room Settings/Members/style/style.css
+++ b/src/Components/Room/Room Settings/Members/style/style.css
@@ -20,6 +20,7 @@ button:focus {
   width: 100%;
   height: 100vh;
   padding: 140px 10px 0 10px;
+  position: relative;
 }
 
 .settings__members-list .find-user-input {
