--- a/src/Components/Room/Message/style/messages.scss
+++ b/src/Components/Room/Message/style/messages.scss
@@ -131,8 +131,8 @@
       border-radius: 50%;
       overflow: hidden;
       img {
-        width: auto;
-        height: 100%;
+        width: 100%;
+        vertical-align: bottom;
       }
     }
     .room-name {
