--- a/src/Components/Home/style/style.css
+++ b/src/Components/Home/style/style.css
@@ -92,9 +92,20 @@ main .btns-wrapper button {
   height: 100px;
   font-size: 1.6em;
   font-weight: 900;
+  position: relative;
   color: #FFF;
   border: none;
   cursor: pointer;
+}
+
+main .btns-wrapper button:nth-child(2) {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background: gray;
+}
+
+main .btns-wrapper button:nth-child(2):hover .box {
+  opacity: 1;
 }
 
 @media screen and (max-width: 417px) {
@@ -103,5 +114,42 @@ main .btns-wrapper button {
     height: 90px;
     font-size: 1.2em;
   }
+}
+
+.box {
+  width: 180px;
+  height: auto;
+  background-color: black;
+  -webkit-transform: translateY(-150px);
+          transform: translateY(-150px);
+  color: #fff;
+  padding: 20px;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+  position: absolute;
+  opacity: 0;
+  font-size: 0.9rem;
+  margin: 40px;
+  font-weight: 300;
+  border-radius: 10px;
+}
+
+@media only screen and (min-width: 240px) and (max-width: 768px) {
+  .box {
+    display: block;
+    float: none;
+    margin: 40px auto;
+  }
+}
+
+.box.arrow-bottom:after {
+  content: " ";
+  position: absolute;
+  right: 40%;
+  bottom: -15px;
+  border-top: 15px solid black;
+  border-right: 15px solid transparent;
+  border-left: 15px solid transparent;
+  border-bottom: none;
 }
 /*# sourceMappingURL=style.css.map */
