--- a/src/Components/Home/style/style.scss
+++ b/src/Components/Home/style/style.scss
@@ -41,9 +41,19 @@ main{
 			height: 100px;
 			font-size: 1.6em;
 			font-weight: 900;
+			position: relative;
 			color: #FFF;
 			border: none;
 			cursor: pointer;
+			&:nth-child(2){
+				box-shadow: none;
+				background: gray;
+				&:hover{
+					.box{
+						opacity: 1;	
+					}
+				}
+			}
 			@media screen and(max-width: 417px){
 				width: 210px;
 				height: 90px;
@@ -51,4 +61,38 @@ main{
 			}
 		}
 	}
+}
+
+.box {
+  width: 180px;
+  height: auto;
+  background-color: black;
+	transform: translateY(-150px);
+  color: #fff;
+  padding: 20px;
+	transition: 0.1s ease-in;
+  position: absolute;
+	opacity: 0;
+	font-size: 0.9rem;
+  margin: 40px;
+	font-weight: 300;
+	border-radius: 10px;
+}
+@media only screen and (min-width:240px) and (max-width: 768px){
+	.box{
+			display: block;
+			float: none;
+			margin: 40px auto;
+	}
+}
+
+.box.arrow-bottom:after {
+  content: " ";
+  position: absolute;
+  right: 40%;
+  bottom: -15px;
+  border-top: 15px solid black;
+  border-right: 15px solid transparent;
+  border-left: 15px solid transparent;
+  border-bottom: none;
 }
