Added: Settings UI

--- a/src/Components/Client/Profile/style/catalog_select.css
+++ b/src/Components/Client/Profile/style/catalog_select.css
@@ -17,6 +17,16 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
   cursor: pointer;
   margin: 0 5px;
   width: 120px;
