--- a/src/Components/Home/style/alert__style.css
+++ b/src/Components/Home/style/alert__style.css
@@ -16,6 +16,16 @@ button:focus {
           box-shadow: 0 0 0 5px rgba(255, 86, 171, 0.411);
 }
 
+::-moz-selection {
+  background: #FA00FF;
+  color: #FFF;
+}
+
+::selection {
+  background: #FA00FF;
+  color: #FFF;
+}
+
 .alert-container {
   display: -webkit-box;
   display: -ms-flexbox;
