--- a/src/Components/Client/Profile/style/catalog_select.scss
+++ b/src/Components/Client/Profile/style/catalog_select.scss
@@ -7,6 +7,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
     cursor: pointer;
     margin: 0 5px;
     width: 120px;
