--- a/src/Components/Client/Profile/style/profile_avatar.scss
+++ b/src/Components/Client/Profile/style/profile_avatar.scss
@@ -3,17 +3,25 @@
   padding: 0 20px;
   min-height: 600px;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  h1{
+    color: #242424;
+    z-index: 9;
+    margin-left: 20px;
+    @media screen and(max-width: 580px){
+      margin-left: 0;
+    }
+  }
   &.dark{
     h1{
-      color: #FFF;
+      color: #e7e7e7;
+      cursor: default;
     }
     .user-avatar{
       border: 8px solid #1A1A1A;
     }
-  }
-  h1{
-    z-index: 9;
-    margin-left: 20px;
   }
   .user-avatar{
     width: 160px;
@@ -39,6 +47,10 @@
     align-items: center;
     padding: 0 20px;
     overflow: hidden;
+    @media screen and(max-width: 580px){
+      flex-direction: column;
+      padding: 20px;
+    }
     .background-wrapper{
       overflow: hidden;
       width: 100%;
