--- a/src/Components/Home/Sign up/style/style.css
+++ b/src/Components/Home/Sign up/style/style.css
@@ -16,6 +16,16 @@ button:focus {
           box-shadow: 0 0 0 5px rgba(255, 86, 171, 0.411);
 }
 
+::-moz-selection {
+  background: #FA00FF;
+  color: #FFF;
+}
+
+::selection {
+  background: #FA00FF;
+  color: #FFF;
+}
+
 .sign__up-form {
   display: -webkit-box;
   display: -ms-flexbox;
