--- a/src/Components/Client/Profile/style/profile_avatar.scss
+++ b/src/Components/Client/Profile/style/profile_avatar.scss
@@ -20,7 +20,7 @@
       cursor: default;
     }
     .user-avatar{
-      border: 8px solid #1A1A1A;
+      border: 5px solid #1A1A1A;
     }
   }
   .user-avatar{
@@ -29,12 +29,11 @@
     min-height: 160px;
     min-width: 160px;
     border-radius: 50%;
-    z-index: 9;
+    z-index: 8;
     border: 5px solid #FFF;
     overflow: hidden;
     img{
-      width: auto;
-      height: 100%;
+      width: 100%;
     }
   }
   .profile-background{
