--- a/src/Components/Client/Settings/style/style.scss
+++ b/src/Components/Client/Settings/style/style.scss
@@ -46,8 +46,7 @@
           height: 200px;
         }
         img{
-          width: auto;
-          height: 100%;
+          width: 100%;
         }
       }
       .remove-avatar{
