--- a/src/Components/Home/Room Setup/style/style.scss
+++ b/src/Components/Home/Room Setup/style/style.scss
@@ -42,6 +42,9 @@
   border-right: 3px solid transparent;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
+  &.dark{
+  border-top: 3px solid #000;
+  }
 }
 
 @keyframes rotation {
