Added: Password Checker UI

--- a/src/Components/Client/Settings/style/style.css
+++ b/src/Components/Client/Settings/style/style.css
@@ -128,4 +128,21 @@
     min-height: auto;
   }
 }
+
+.password-warns {
+  width: 100%;
+  max-width: 400px;
+  min-height: 50px;
+  background-color: #b92a2a;
+  border-radius: 7px;
+}
+
+.password-warns ul {
+  width: 100%;
+  padding: 10px 40px;
+}
+
+.password-warns ul li {
+  color: #FFF;
+}
 /*# sourceMappingURL=style.css.map */
