--- a/src/Components/style/navbar__style.scss
+++ b/src/Components/style/navbar__style.scss
@@ -131,8 +131,7 @@ nav {
         border-radius: 50%;
         overflow: hidden;
         img{
-          width: auto;
-          height: 100%;
+          width: 100%;
         }
       }
       .menu__username{
