--- a/src/Components/Client/Settings/style/style.css
+++ b/src/Components/Client/Settings/style/style.css
@@ -137,6 +137,17 @@
   border-radius: 7px;
 }
 
+.password-warns.success {
+  background-color: #52b92a;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 10px;
+}
+
 .password-warns ul {
   width: 100%;
   padding: 10px 40px;
