--- a/src/Components/Room/RoomUsers/style/dashboard.scss
+++ b/src/Components/Room/RoomUsers/style/dashboard.scss
@@ -37,8 +37,7 @@
 			overflow: hidden;
 			border-radius: 50%;
 			img{
-				width: auto;
-				height: 100%;
+				width: 100%
 			}
 		}
 		.active-users__username{
