--- a/src/Components/Room/Room Settings/Banned Members/style/unban.scss
+++ b/src/Components/Room/Room Settings/Banned Members/style/unban.scss
@@ -11,7 +11,6 @@
   align-items: center;
   justify-content: center;
   padding: 0 20px;
-  -webkit-backdrop-filter: blur( 20px );
   .unban_accept-container{
     max-width: 100%;
     width: 430px;
@@ -85,4 +84,25 @@
       }
     }
   }
+}
+
+.none-banned-ui{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: calc(100% - 150px);
+  img{
+    width: 200px;
+  }
+  @media screen and(max-width: 1017px){
+    justify-content: flex-start;
+    padding-top: 20px;
+  }
+}
+
+.random-none-banned-text{
+    text-align: center;
+    margin-top: 40px;
+    font-weight: 300;
 }
