--- a/src/Components/Room/Room Settings/Members/style/style.scss
+++ b/src/Components/Room/Room Settings/Members/style/style.scss
@@ -5,6 +5,10 @@
   height: 100vh;
   padding: 140px 10px 0 10px;
   position: relative;
+  @media screen and (max-width: 1017px){
+    padding: 100px 10px 0 10px;
+
+  }
   .find-user-input {
     width: 100%;
     background: transparent;
@@ -24,11 +28,14 @@
   .members-list-wrapper {
     width: 100%;
     height: 100%;
-    padding: 5px 10px;
+    padding: 5px 0;
     overflow-y: auto;
     gap: 10px 0;
     position: relative;
     padding-bottom: 50px;
+    @media screen and(max-width: 1017px){
+      padding: 10px 0;
+    }
   }
   .settings__member-list {
     width: 100%;
