--- a/src/Components/Room/Room Settings/Overview/style/confirm.scss
+++ b/src/Components/Room/Room Settings/Overview/style/confirm.scss
@@ -1,6 +1,7 @@
 .confirm-delete-modal{
   position: absolute;
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
   min-height: 300px;
   background-color: #FFF;
   z-index: 20;
@@ -44,6 +45,50 @@
       &:focus{
         box-shadow: 0 0 0 3px rgba(255, 49, 49, 0.411);
       }
+    }
+  }
+}
+
+.menu-toggler{
+  position: absolute;
+  width: 40px;
+  height: 50px;
+  top: 0;
+  left: 0;
+  transform: translate(20px, 20px);
+  display: flex;
+  align-items: center;
+  display: none;
+  cursor: pointer;
+  justify-content: center;
+  @media screen and(max-width: 1017px){
+    display: flex;
+  }
+  .stick{
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+    border-radius: 10px;
+    &::before{
+      content: "";
+      width: 100%;
+      background-color: inherit;
+      height: 3px;
+      transform: translateY(10px);
+      position: absolute;
+      border-radius: 10px;
+    }
+    &::after{
+      border-radius: 10px;
+      content: "";
+      width: 100%;
+      background-color: inherit;
+      height: 3px;
+      transform: translateY(-10px);
+      position: absolute;
+    }
+    &.dark{
+      background-color: #FFF;
     }
   }
 }
