--- a/src/Components/Room/Room Settings/Overview/style/style.scss
+++ b/src/Components/Room/Room Settings/Overview/style/style.scss
@@ -1,19 +1,21 @@
 .overview-info__dashboard {
 	width: 100%;
-	height: 250px;
+	min-height: 250px;
 	display: flex;
 	flex-direction: column;
 	position: relative;
 	padding: 0 10px;
 	height: 100vh;
-
 	.room-dashboard-logo {
 		padding: 0 50px;
-		height: 300px;
+		min-height: 300px;
 		display: flex;
 		align-items: center;
 		gap: 20px;
-
+		@media screen and(max-width: 900px){
+			flex-direction: column;
+			padding: 20px 10px;
+		}
 		.room-info__inputs {
 			width: 100%;
 			height: 100%;
@@ -22,7 +24,9 @@
 			justify-content: center;
 			gap: 10px 0;
 			flex-direction: column;
-
+			@media screen and(max-width: 900px){
+				padding: 0 5px;
+			}
 			.label {
 				text-align: left;
 				width: 100%;
@@ -70,7 +74,12 @@
 			min-width: 250px;
 			border-radius: 50%;
 			overflow: hidden;
-
+			@media screen and(max-width: 900px){
+				height: 200px;
+				width: 200px;
+				min-width: 200px;
+				min-height: 200px;
+			}
 			img {
 				width: 100%;
 				vertical-align: bottom;
@@ -127,7 +136,7 @@
 
 .delete-wrapper {
 	margin-top: 20px;
-
+	min-height: 40px;
 	.delete-alert-text {
 		color: #000;
 		margin-bottom: 5px;
