--- a/src/Components/Room/Room Settings/style/style.css
+++ b/src/Components/Room/Room Settings/style/style.css
@@ -36,11 +36,20 @@ button:focus {
   background: rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
           box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(11px);
   -webkit-backdrop-filter: blur(11px);
+          backdrop-filter: blur(11px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media screen and (max-width: 1017px) {
+  .room__settings-dashboard {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .room__settings-dashboard .room__settings-categories {
@@ -57,6 +66,23 @@ button:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+@media screen and (max-width: 1017px) {
+  .room__settings-dashboard .room__settings-categories {
+    position: fixed;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    width: 100%;
+    z-index: 99;
+    background: rgba(0, 0, 0, 0.9) !important;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  .room__settings-dashboard .room__settings-categories.open {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
 }
 
 .room__settings-dashboard .room__settings-categories.dark {
@@ -81,6 +107,12 @@ button:focus {
   -webkit-box-shadow: none;
           box-shadow: none;
   font-size: 1.025rem;
+}
+
+@media screen and (max-width: 700px) {
+  .room__settings-dashboard .room__settings-categories .room_categories-btn {
+    width: 100%;
+  }
 }
 
 .room__settings-dashboard .room__settings-categories .room_categories-btn.active {
@@ -112,7 +144,7 @@ button:focus {
   height: 40px;
   position: absolute;
   cursor: pointer;
-  z-index: 20;
+  z-index: 99;
   right: 0;
   -webkit-transform: translate(-25px, 25px);
           transform: translate(-25px, 25px);
