--- a/src/Components/Room/Message/style/messages.css
+++ b/src/Components/Room/Message/style/messages.css
@@ -170,7 +170,6 @@ button:focus {
   right: 0;
   top: 70px;
   width: 100%;
-  z-index: 6;
   position: fixed;
   border-radius: 0 0 8px 8px;
   -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 8px 0px 16px -8px;
@@ -221,8 +220,15 @@ button:focus {
 }
 
 .room-header .active__users-side {
-  max-width: 400px;
-  width: 100%;
+  width: 100px;
+  min-width: 100px;
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+  .room-header .active__users-side {
+    display: block;
+  }
 }
 
 @-webkit-keyframes skeleton-load {
