--- a/src/Components/Home/style/alert__style.css
+++ b/src/Components/Home/style/alert__style.css
@@ -150,4 +150,83 @@ button:focus {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
+
+.broken-url-wrapper {
+  width: 100%;
+  height: calc(100vh - 70px);
+  padding-bottom: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 20px;
+}
+
+.broken-url-wrapper .ufo-wrapper {
+  width: 380px;
+  height: 380px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #FFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (max-width: 700px) {
+  .broken-url-wrapper .ufo-wrapper {
+    width: 250px;
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .broken-url-wrapper .ufo-wrapper {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+.broken-url-wrapper .ufo-wrapper img {
+  width: auto;
+  height: 100%;
+}
+
+.broken-url-wrapper .not-found-text {
+  margin-top: 50px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.broken-url-wrapper .not-found-text.dark {
+  color: #FFF;
+}
+
+.broken-url-wrapper button {
+  width: 200px;
+  height: 70px;
+  font-size: 1.1em;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: #FFF;
+  background: -webkit-gradient(linear, left top, right top, from(#FA00FF), to(#161955));
+  background: linear-gradient(to right, #FA00FF, #161955);
+}
 /*# sourceMappingURL=alert__style.css.map */
