--- a/src/Components/Home/style/alert__style.scss
+++ b/src/Components/Home/style/alert__style.scss
@@ -73,3 +73,55 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.broken-url-wrapper{
+  width: 100%;
+  height: calc(100vh - 70px);
+  padding-bottom: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 20px;
+  .ufo-wrapper{
+    width: 380px;
+    height: 380px;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @media screen and(max-width: 700px){
+      width: 250px;
+      height: 250px;
+    }
+    @media screen and(max-width: 350px){
+      width: 200px;
+      height: 200px;
+    }
+    img{
+      width: auto;
+      height: 100%;
+    }
+  }
+  .not-found-text{
+    margin-top: 50px;
+    font-weight: 500;
+    text-align: center;
+    &.dark{
+      color: #FFF;
+    }
+  }
+  button{
+    width: 200px;
+    height: 70px;
+    font-size: 1.1em;
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: #FFF;
+    @include gradient__bg($gradient__color-one, $gradient__color-two);
+  }
+}
