--- a/src/Components/Home/style/alert__style.scss
+++ b/src/Components/Home/style/alert__style.scss
@@ -103,6 +103,12 @@
     img{
       width: auto;
       height: 100%;
+      -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
     }
   }
   .not-found-text{
