Fixed: Zalgo text issues

--- a/src/Components/style/navbar__style.css
+++ b/src/Components/style/navbar__style.css
@@ -21,7 +21,7 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 9;
+  z-index: 22;
   width: 100%;
   padding: 0 1.2rem;
   position: relative;
@@ -139,6 +139,7 @@ nav .dropped__menu {
   gap: 10px;
   width: 200px;
   right: 0;
+  z-index: 22 !important;
   height: 180px;
   padding: 10px 5px;
   border-radius: 10px 0 10px 10px;
