--- a/src/Components/Room/Message/Message Types/style/style.css
+++ b/src/Components/Room/Message/Message Types/style/style.css
@@ -139,6 +139,7 @@ button:focus {
   width: 100%;
   height: 100%;
   min-height: 45px;
+  overflow: hidden;
   color: #000;
   overflow-wrap: anywhere;
 }
@@ -210,6 +211,7 @@ button:focus {
   font-size: 0.8em;
   color: #363636;
   margin-left: 5px;
+  overflow: hidden;
 }
 
 .replied-message-wrapper .replied-message__content .replied__messageText.dark {
