--- a/src/Components/Room/Message/Message Types/style/style.scss
+++ b/src/Components/Room/Message/Message Types/style/style.scss
@@ -10,14 +10,6 @@
 	position: relative;
 	display: flex;
 	transition: 0.3s ease;
-	// @media (hover: none){
-	// 	background: inherit;
-	// }
-	// @media (hover: hover){
-	// 	&:hover{
-	// 		background: none;
-	// 	}
-	// }
 	&:active{
 		background: #3f3f3f;
 	}
@@ -73,6 +65,7 @@
 			width: 100%;
 			height: 100%;
 			min-height: 45px;
+			overflow: hidden;
 			color: #000;
 			overflow-wrap: anywhere;
 			&.dark{
@@ -102,7 +95,7 @@
 		}
 	}
 	.replied-message__content{
-	width: 100%;
+		width: 100%;
 		height: 40px;
 		display: flex;
 		.curved-line{
@@ -128,6 +121,7 @@
 			font-size: 0.8em;
 			color: #363636;
 			margin-left: 5px;
+			overflow: hidden;
 			&.dark{
 				color: #a0a0a0;
 			}
