--- a/src/Components/Room/Message/style/messages.css
+++ b/src/Components/Room/Message/style/messages.css
@@ -168,6 +168,7 @@ button:focus {
   display: flex;
   height: 50px;
   right: 0;
+  z-index: 10;
   top: 70px;
   width: 100%;
   position: fixed;
@@ -196,6 +197,8 @@ button:focus {
   cursor: pointer;
   width: 40px;
   height: 40px;
+  min-width: 40px;
+  min-height: 40px;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -207,7 +210,9 @@ button:focus {
 
 .room-header .room__info .room-name {
   margin-left: 20px;
+  overflow: hidden;
   cursor: pointer;
+  overflow: hidden;
   color: #000;
 }
 
