--- a/src/Components/Room/Message/style/messages.scss
+++ b/src/Components/Room/Message/style/messages.scss
@@ -108,7 +108,7 @@
   display: flex;
   height: 50px;
   right: 0;
-  // z-index: 21;
+  z-index: 10;
   top: 70px;
   width: 100%;
   position: fixed;
@@ -128,6 +128,8 @@
       cursor: pointer;
       width: 40px;
       height: 40px;
+      min-width: 40px;
+      min-height: 40px;
       border-radius: 50%;
       overflow: hidden;
       img {
@@ -137,7 +139,9 @@
     }
     .room-name {
       margin-left: 20px;
+      overflow: hidden;
       cursor: pointer;
+      overflow: hidden;
       color: #000;
       &:hover{
         text-decoration: underline;
