--- a/src/Components/Room/Room Settings/style/style.scss
+++ b/src/Components/Room/Room Settings/style/style.scss
@@ -40,7 +40,7 @@
 				color: #FFF;
 				&.active{
 					&:hover{
-						color: #FFF;
+						color: #000;
 					}
 				}
 			}
@@ -48,7 +48,7 @@
 		.room_categories-btn{
 			background: transparent;
 			cursor: pointer;
-			color: #000;
+			color: #fff;
 			border: none;
 			height: 50px;
 			border-radius: 7px;
